echoserver-pod-created.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: 2018-11-16T18:43:26Z
  name: echoserver
  namespace: dev
  resourceVersion: "270833"
  selfLink: /api/v1/namespaces/dev/pods/echoserver
  uid: 81027efd-e9cf-11e8-bd18-02000b7c000b
spec:
  containers:
  - image: gcr.io/google_containers/echoserver:1.4
    imagePullPolicy: IfNotPresent
    name: echoserver
    ports:
    - containerPort: 8080
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-988n4
      readOnly: true
  dnsPolicy: ClusterFirst
  nodeName: k8snode1
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-988n4
    secret:
      defaultMode: 420
      secretName: default-token-988n4
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: 2018-11-16T18:43:26Z
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: 2018-11-16T18:43:28Z
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: 2018-11-16T18:43:26Z
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://86c55eb1ea23042ef6b5ade33f054f4f98db574cb4a6b75e470cecfe2f239f46
    image: gcr.io/google_containers/echoserver:1.4
    imageID: docker-pullable://gcr.io/google_containers/echoserver@sha256:5d99aa1120524c801bc8c1a7077e8f5ec122ba16b6dda1a5d3826057f67b9bcb
    lastState: {}
    name: echoserver
    ready: true
    restartCount: 0
    state:
      running:
        startedAt: 2018-11-16T18:43:27Z
  hostIP: 10.177.174.233
  phase: Running
  podIP: 192.168.249.54
  qosClass: BestEffort
  startTime: 2018-11-16T18:43:26Z
