grafana_ext_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-ext
  namespace: istio-system
  annotations:
  labels:
    app: istio-grafana-ext
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: grafana
