jaeger_ext_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-ext
  namespace: istio-system
  annotations:
  labels:
    app: istio-jaeger-ext
spec:
  type: NodePort
  ports:
    - port: 16686
      targetPort: 16686
      protocol: TCP
      name: http
  selector:
    app: jaeger
