prometheus_ext_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-ext
  namespace: istio-system
  annotations:
  labels:
    app: istio-prometheus-ext
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: http
  selector:
    app: prometheus
